Starting to add the ability to view images on the page with pagination (previous and next) buttons that will cycle through the images in memory

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,18 @@
 <html>
     <head>
         <script src="/javascript/viewer.js"></script>
+        <link rel="stylesheet" href="css/viewer.css">
     </head>
 
     <body>
         <h1>Photr</h1>
 
-        <div id="viewer" />
+        <div id="photrViewer">
+            <div id="imageContainer"></div>
+            <div id="buttons">
+                <button id="prev" disabled>Previous</button>
+                <button id="next" disabled>Next</button>
+            </div>
+        </div>
     </body>
 </html>
