Refactored to make things a little more reusable

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <script src="/javascript/globals.js"></script>
+        <script src="/javascript/Image.js"></script>
+        <script src="/javascript/PhotrViewer.js"></script>
         <script src="/javascript/viewer.js"></script>
         <link rel="stylesheet" href="css/viewer.css">
     </head>
@@ -8,10 +11,10 @@
         <h1>Photr</h1>
 
         <div id="photrViewer">
-            <div id="imageContainer"></div>
-            <div id="buttons">
-                <button id="prev" disabled>Previous</button>
-                <button id="next" disabled>Next</button>
+            <div class="imageContainer"></div>
+            <div class="buttons">
+                <button class="previous" disabled>Previous</button>
+                <button class="next" disabled>Next</button>
             </div>
         </div>
     </body>
