Generate the html for the viewew in JS

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <!-- Ideally this would be minimized and combined in the build -->
         <script src="/javascript/globals.js"></script>
         <script src="/javascript/Image.js"></script>
         <script src="/javascript/PhotrViewer.js"></script>
@@ -10,12 +11,6 @@
     <body>
         <h1>Photr</h1>
 
-        <div id="photrViewer">
-            <div class="imageContainer"></div>
-            <div class="buttons">
-                <button class="previous" disabled>Previous</button>
-                <button class="next" disabled>Next</button>
-            </div>
-        </div>
+        <div id="yahooImageSearch" />
     </body>
 </html>
