--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <script src="/javascript/globals.js"></script>
         <script src="/javascript/Image.js"></script>
         <script src="/javascript/PhotrViewer.js"></script>
+        <script src="/javascript/LightBox.js"></script>
         <script src="/javascript/viewer.js"></script>
         <link rel="stylesheet" href="css/viewer.css">
     </head>
