Add keyboard shortcuts to more between photos and add allow the user to put in a photo set id

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <body>
         <h1>Photr</h1>
 
-        <div id="yahooImageSearch" />
+        <input id="flickrPhotosetId" type="text" value="72157626579923453" />
+        <button id="viewFlickrPhotoset">View flickr photo set</button>
     </body>
 </html>
