Added google search

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,8 @@
 
         <input id="flickrPhotosetId" type="text" value="72157626579923453" />
         <button id="viewFlickrPhotoset">View flickr photo set</button>
+        <div class="or">OR</div>
+        <input id="googleSearchTerm" type="text" placeholder="Enter a search term" />
+        <button id="viewGoogleResults">Search google images</button>
     </body>
 </html>
